# cmis-adapter

./: .bumpversion.cfg  .coveragerc  .gitignore  .isort.cfg  .travis.yml  AUTHORS  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE-MIT  LICENSE.md  MANIFEST.in  Procfile  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: ci.yml  code_quality.yml
alfresco/: README.rst  Vagrantfile  docker-compose-6.1.2-ga.yml  docker-compose-6.2.0-ga.yml  docker-compose.yml  setup.sh
alfresco/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
alfresco/config/: alfresco-global.properties  alfresco-zsdms-model.xml
alfresco/extension/: alfresco-zsdms-model.xml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
drc_cmis/: __init__.py  abstract.py  admin.py  apps.py  backend.py  choices.py  client.py  client_builder.py  connections.py  convert.py  exceptions.py  forms.py  mapper.py  mixins.py  models.py  notifications.py  query.py  settings.py  storage.py  urls.py  utils.py  validators.py  views.py
drc_cmis/browser/: client.py  drc_document.py  request.py  utils.py
drc_cmis/client/: __init__.py  browser_client.py  client.py  convert.py  exceptions.py  mapper.py  soap_client.py  utils.py
drc_cmis/cmis/: browser_drc_document.py  browser_request.py  drc_document.py  soap_drc_document.py  soap_request.py  utils.py
drc_cmis/data/: data_models.py  v1_0_x.py
drc_cmis/management/commands/: cmis_integratie.py
drc_cmis/migrations/: 0001_initial.py  0001_initial_new.py  0002_auto_20190523_1054.py  0002_drccmisconnection.py  0003_auto_20190430_1053.py  0003_auto_20191029_1349.py  0004_auto_20200616_0919.py  0004_cmisconfiguration.py  0005_auto_20200723_1352.py  0006_cmisconfig_binding.py  0007_cmisconfig_time_zone.py  0008_auto_20200806_1030.py  0009_auto_20200810_0830.py  0010_auto_20200811_1221.py  0011_auto_20200813_1640.py  0012_auto_20200821_1512.py  0013_auto_20201216_1046.py  0013_auto_20201224_1302.py  0014_auto_20210106_1602.py  0015_merge_20210204_1046.py  0016_alter_cmisconfig_time_zone.py
drc_cmis/static/drc_cmis/js/: cmis_config.js
drc_cmis/templates/: configuration_form.html
drc_cmis/utils/: exceptions.py  folder.py  mapper.py  utils.py
drc_cmis/webservice/: client.py  data_models.py  drc_document.py  fetcher.py  request.py  utils.py
reports/: junit.xml
test_app/: cmis_mapper.json  manage.py  settings.py  urls.py
test_app/app/: models.py  utils.py
test_app/app/management/commands/: validate_dms.py
test_app/app/migrations/: 0001_initial.py
tests/: database.db  factories.py  manage.py  mixins.py  settings.py  test_admin.py  test_browser_client.py  test_browser_document.py  test_caching.py  test_clients.py  test_connection_pooling.py  test_create_connection_backend.py  test_create_document_backend.py  test_delete_connection_backend.py  test_delete_document_backend.py  test_delete_relations.py  test_documents.py  test_fetcher.py  test_gebruiksrechten.py  test_mapper.py  test_notifications.py  test_oio.py  test_path_validators.py  test_read_connection_backend.py  test_read_document_backend.py  test_soap_client.py  test_soap_document.py  test_update_connection_backend.py  test_update_document_backend.py  test_utils.py  test_zaak_folder.py  urls.py  utils.py
tests/app/: backend.py  data.py  models.py  utils.py
tests/app/migrations/: 0001_initial.py
tests/responses/: alfresco-get-results.json  zrc-openapi.yaml  zrc-zaak.json  ztc-openapi.yaml  ztc-zaaktype.json
tests/tests/: factories.py  mixins.py  test_apps.py  test_backend.py  test_create_connection_backend.py  test_create_document_backend.py  test_delete_connection_backend.py  test_delete_document_backend.py  test_gebruiksrechten.py  test_mapper.py  test_models.py  test_notifications.py  test_oio.py  test_read_connection_backend.py  test_read_document_backend.py  test_storage.py  test_update_connection_backend.py  test_update_document_backend.py  test_utils.py  test_views.py
tests/tests/cmis_client/: test_base.py  test_boomstructuur.py  test_check_lock.py  test_checkout.py  test_client_init.py  test_folders.py  test_sync.py  test_update_zaakdocument.py  test_zaakdocument.py
tests/tests/test_client/: test_mapper.py
