[metadata]
name = 'gemma-drc-cmis'
version = '0.3.4'
description = ''
author = 'Jorik Kraaikamp'
author_email = 'jorikkraaikamp@gmail.com'
license = 'MIT'
url = 'https://github.com/gemeenteutrecht/gemma-drc-cmis'

[requires]
python_version = ['3.7']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env/
  | _build
  | buck-out
  | build
  | dist
)/
'''
