[metadata]
name = drc-cmis
version = 0.4.0
description = An adapter to manage Documenten API resources in a CMIS backend.
long_description = file: README.rst
url = https://github.com/GemeenteUtrecht/gemma-drc-cmis
license = MIT
author = Maykin Media, Jorik Kraaikamp, Sergei Maertens
author_email = support@maykinmedia.nl
keywords = CMIS, Documenten API, VNG, Common Ground
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django < 3.0
    django-choices
    cmislib-maykin >= 0.7.2.dev0
    django-solo
    iso8601
    vng-api-common
tests_require =
    pytest
    pytest-django
    tox
    isort
    factory-boy
    psycopg2
    responses

[options.packages.find]
exclude =
    tests
    tests.*
    test_app
    test_app.*

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    factory-boy
    psycopg2
    responses
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test = pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_django=django
known_first_party=drc_cmis
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE=test_app.settings
testpaths = tests
; collect_ignore = ['setup.py']
; django_find_project=false
; python_files = test_*.py
; python_paths = .

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length = 88
exclude = env,.tox,doc

[coverage:run]
source =
    drc_cmis
branch = True
omit =
    drc_cmis/migrations/*

[coverage:report]
exclude_lines =
    no cov
    no qa
    noqa
    pragma: no cover
    if __name__ == .__main__.:

[coverage:xml]
output=coverage.xml
