[metadata]
name = drc-cmis
version = 1.2.6
description = An adapter to manage Documenten API resources in a CMIS backend.
long_description = file: README.rst
url = https://github.com/open-zaak/cmis-adapter
license = EUPL-1.2
author = Maykin Media, Joeri Bekker, Jorik Kraaikamp, Sergei Maertens, Silvia Amabilino
author_email = support@maykinmedia.nl
keywords = CMIS, Documenten API, VNG, Common Ground
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django>=2.2.0,<4.0
    django-choices
    cmislib-maykin >= 0.7.2.dev0
    django-solo
    iso8601
    vng-api-common
    python-decouple
tests_require =
    pytest
    pytest-django
    tox
    freezegun
    isort
    black
    factory-boy >= 3.0.0
    psycopg2
    responses

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
    factory-boy >= 3.0.0
    psycopg2
    responses
    freezegun
    requests_mock
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test = pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
not_skip = __init__.py
known_django=django
known_first_party=drc_cmis
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
DJANGO_SETTINGS_MODULE=test_app.settings
testpaths = tests
; collect_ignore = ['setup.py']
; django_find_project=false
; python_files = test_*.py
; python_paths = .

[pep8]
[flake8]
max-line-length = 119
exclude = env,.tox,doc

[coverage:run]
source =
    drc_cmis
branch = True
omit =
    drc_cmis/migrations/*

[coverage:report]
exclude_lines =
    no cov
    no qa
    noqa
    pragma: no cover
    if __name__ == .__main__.:

[coverage:xml]
output=coverage.xml
